# AILib

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
.github/workflows/: build-acr.yml
apps/api/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260609_0001_initial_schema.py
apps/api/app/: main.py  schemas.py
apps/api/app/api/: auth.py  deps.py  routes.py
apps/api/app/core/: config.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  base.py  document.py  document_chunk.py  user.py
apps/api/app/services/: __init__.py  document_parser.py  rag.py  semantic_index.py
apps/api/tests/: test_auth_cookies.py  test_config.py  test_document_parser.py  test_migrations.py  test_rag.py  test_routes.py  test_security.py  test_semantic_index.py
apps/web/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: auth-panel.tsx  document-form.tsx  document-upload-form.tsx  knowledge-workspace.tsx  rag-chat-panel.tsx  semantic-search-panel.tsx
apps/web/e2e/: workspace.spec.ts
apps/web/lib/: api.ts
deploy/: .env.prod.example  Caddyfile  Dockerfile.web  README_DEPLOY.md  docker-compose.acr.yml  docker-compose.prod.yml  env.acr.example
deploy/private/: Caddyfile.private  Dockerfile.web-dev  docker-compose.private.yml  env.private.example
docs/: ACR_DEPLOYMENT.md  AILIB_PROJECT_REPORT.md  DEMO_SCRIPT.md  FINAL_AUDIT.md  LOCAL_DEPLOYMENT.md  PRIVATE_DEPLOYMENT.md  PROJECT_SHOWCASE.md  QUALITY_CHECKLIST.md
docs/superpowers/plans/: 2026-06-04-phase-1-foundation.md  2026-06-04-phase-2-authentication.md  2026-06-04-phase-3-document-upload.md  2026-06-04-phase-4-semantic-search.md  2026-06-08-phase-5-rag-chat.md  2026-06-09-phase-6-frontend-workspace.md  2026-06-09-phase-7-quality-showcase.md  2026-06-09-phase-8-production-hardening.md
prompt/: explain-code.md
prompts/: explain-code.md
scripts/deploy/: Backup-AILibDatabase.ps1  check-server.ps1
scripts/local/: Start-AILibLocal.ps1  Status-AILibLocal.ps1  Stop-AILibLocal.ps1
scripts/private/: AILibPrivate.Common.ps1  Start-AILibPrivate.ps1  Status-AILibPrivate.ps1  Stop-AILibPrivate.ps1
