[project]
name = "ailib-api"
version = "0.1.0"
description = "FastAPI backend for AILib"
requires-python = ">=3.11"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi[standard]>=0.115.0",
  "pgvector>=0.3.6",
  "pydantic-settings>=2.7.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.8.0"
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
